--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = oslo.utils
-summary = oslo.utils library
+summary = Oslo Utility library
 description-file =
     README.rst
 author = OpenStack
@@ -22,7 +22,6 @@ classifier =
 [files]
 packages =
     oslo
-    oslo.utils
 namespace_packages =
     oslo
 
