get pep8 working

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,6 @@ commands = python setup.py testr --coverage --testr-args='{posargs}'
 # E123, E125 skipped as they are invalid PEP-8.
 
 show-source = True
-ignore = E123,E125,H304,H405,H803
+ignore = E123,E125,H302,H304,H405,H803
 builtins = _
 exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,__init__.py
