Add API docs and clean up other docs
Add auto-generated documentation for the public modules in the library
and clean up a bit of the docstrings used.

Change-Id: Id5efa5c413b82e13f1a7ac78c92e39c193f12214

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,9 @@ packages =
 namespace_packages =
     oslo
 
+[pbr]
+warnerrors = true
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
