--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+# The order of packages is significant, because pip processes them in the order
+# of appearance. Changing the order has an impact on the overall integration
+# process, which may cause wedges in the gate later.
+
 Babel>=1.3
 six>=1.7.0
 iso8601>=0.1.9
