--- a/setup.cfg
+++ b/setup.cfg
@@ -49,3 +49,6 @@ input_file = oslo.utils/locale/oslo.utils.pot
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
 output_file = oslo.utils/locale/oslo.utils.pot
+
+[wheel]
+universal = 1
