--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ pbr>=0.6,!=0.7,<1.0
 Babel>=1.3
 six>=1.9.0
 iso8601>=0.1.9
-oslo.i18n>=1.5.0,<1.6.0  # Apache-2.0
+oslo.i18n>=1.5.0  # Apache-2.0
 netaddr>=0.7.12
 netifaces>=0.10.4
