--- a/tox.ini
+++ b/tox.ini
@@ -29,11 +29,8 @@ commands = python setup.py build_sphinx
 commands = python setup.py testr --coverage --testr-args='{posargs}'
 
 [flake8]
-# H803 skipped on purpose per list discussion.
-# E123, E125 skipped as they are invalid PEP-8.
-
+ignore = E123,H405
 show-source = True
-ignore = E123,E125,H302,H304,H405,H803
 exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,__init__.py
 
 [testenv:pip-missing-reqs]
