--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
 
-pbr>=0.6,!=0.7,<1.0
-Babel>=1.3
-six>=1.9.0
-iso8601>=0.1.9
-oslo.i18n>=1.3.0  # Apache-2.0
-netaddr>=0.7.12
-netifaces>=0.10.4
+pbr!=0.7,<1.0,>=0.6
+Babel<=1.3,>=1.3
+six<=1.9.0,>=1.7.0
+iso8601<=0.1.10,>=0.1.9
+oslo.i18n<=1.3.1,>=1.0.0 # Apache-2.0
+netaddr<=0.7.13,>=0.7.12
+netifaces<=0.10.4,>=0.10.4
