Fix coverage configuration and execution
A number of configuration errors prevent the successful creation of code
coverage. This corrects the .coveragerc source/omit setup and the tox
package name generation.

http://lists.openstack.org/pipermail/openstack-dev/2015-October/076193.html

Change-Id: Ic7bd03b1411a92c04dc6ea8c5995f88d1738a156

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,8 @@
 [run]
 branch = True
-source = utils
-omit = utils/tests/*,utils/openstack/*
+source = oslo_utils
+omit = oslo_utils/tests/*
 
 [report]
 ignore_errors = True
+precision = 2
