--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ commands = {posargs}
 commands = python setup.py build_sphinx
 
 [testenv:cover]
-commands = python setup.py testr --coverage --testr-args='{posargs}'
+commands = python setup.py test --coverage --coverage-package-name=oslo_utils --testr-args='{posargs}'
 
 [flake8]
 ignore = E123,H405
