--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@
 pbr>=1.6
 Babel>=1.3
 six>=1.9.0
+funcsigs>=0.4;python_version=='2.7' or python_version=='2.6'
 iso8601>=0.1.9
 oslo.i18n>=1.5.0 # Apache-2.0
 monotonic>=0.3 # Apache-2.0
