Remove python 2.6 and cleanup tox.ini
* Remove support for python 2.6
* Remove skipsdist : Needs to be set only if 
  sdist is expensive
* Remove usedevelop : only needed when skipsdist 
  is set to True
* Remove install_command : We can just use the 
  default, we don't need to override
* Remove setenv : We can just use the default as
  we don't need any extra environment variables
* Remove requirements.txt from deps, as this is
  already added automatically


Change-Id: I8fa1a3db7e156d5ee9b62490a63e2ccf0ffdd7f9

--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,9 @@
 [tox]
 minversion = 1.6
-envlist = py34,py26,py27,pep8
-# NOTE(dhellmann): We cannot set skipdist=True
-# for oslo libraries because of the namespace package.
-#skipsdist = True
+envlist = py34,py27,pep8
 
 [testenv]
-# NOTE(dhellmann): We cannot set usedevelop=True
-# for oslo libraries because of the namespace package.
-#usedevelop = True
-install_command = pip install -U {opts} {packages}
-setenv =
-   VIRTUAL_ENV={envdir}
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
+deps = -r{toxinidir}/test-requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
 [testenv:pep8]
