Add a bandit target to tox.ini
Some parts of the code have been annoted with "# nosec" as they made bandit
raise false positives.

Change-Id: I9d8a8ab79e8b5de98e7d291ac132f8971a44216d

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 1.6
-envlist = py34,py27,pep8
+envlist = py34,py27,pep8,bandit
 
 [testenv]
 deps = -r{toxinidir}/test-requirements.txt
@@ -17,6 +17,10 @@ commands = python setup.py build_sphinx
 
 [testenv:cover]
 commands = python setup.py test --coverage --coverage-package-name=oslo_utils --testr-args='{posargs}'
+
+[testenv:bandit]
+deps=-r{toxinidir}/test-requirements.txt
+commands = bandit -c bandit.yaml -r oslo_utils -n5 -p gate
 
 [flake8]
 ignore = E123,H405
