--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ oslo.i18n>=1.5.0 # Apache-2.0
 monotonic>=0.3 # Apache-2.0
 pytz>=2013.6
 netaddr!=0.7.16,>=0.7.12
+netifaces>=0.10.4
 debtcollector>=0.3.0 # Apache-2.0
