--- a/setup.cfg
+++ b/setup.cfg
@@ -34,18 +34,18 @@ all_files = 1
 upload-dir = doc/build/html
 
 [compile_catalog]
-directory = oslo.utils/locale
-domain = oslo.utils
+directory = oslo_utils/locale
+domain = oslo_utils
 
 [update_catalog]
-domain = oslo.utils
-output_dir = oslo.utils/locale
-input_file = oslo.utils/locale/oslo.utils.pot
+domain = oslo_utils
+output_dir = oslo_utils/locale
+input_file = oslo_utils/locale/oslo_utils.pot
 
 [extract_messages]
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
-output_file = oslo.utils/locale/oslo.utils.pot
+output_file = oslo_utils/locale/oslo_utils.pot
 
 [wheel]
 universal = 1
