--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands = python setup.py test --coverage --coverage-package-name=oslo_utils --
 
 [testenv:bandit]
 deps=-r{toxinidir}/test-requirements.txt
-commands = bandit -c bandit.yaml -r oslo_utils -n5 -p gate
+commands = bandit -r oslo_utils -n5
 
 [flake8]
 ignore = E123,H405
