Enable bandit in gate
Run security linter bandit as part of pep8. Pep8
is the usual linter target and thus let's use it there instead of
starting another short-running job to enable it.

Change-Id: Id05b3d06fa25e8cf436d67f8aac400e96c7f75cd

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,17 @@
 [tox]
 minversion = 1.6
-envlist = py34,py27,pep8,bandit
+envlist = py34,py27,pep8
 
 [testenv]
 deps = -r{toxinidir}/test-requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
 [testenv:pep8]
-commands = flake8
+deps=-r{toxinidir}/test-requirements.txt
+commands =
+  flake8
+  # Run security linter
+  bandit -r oslo_utils -n5
 
 [testenv:venv]
 commands = {posargs}
