Explicitly exclude tests from bandit scan
Now that the bandit linter runs without a bandit.yaml specified,
it should exclude the tests directory similar to how it did before
in the bandit.yaml.

The reason this has not caused a problem yet is because bandit is
still finding a config bandit.yaml in .tox/pep8/etc/bandit/bandit.yaml.
But in a newer version of bandit this will not be the case.

Change-Id: Ic2d6d5da7083936eb364f56fb23e09b5dbccebae

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps=-r{toxinidir}/test-requirements.txt
 commands =
   flake8
   # Run security linter
-  bandit -r oslo_utils -n5
+  bandit -r oslo_utils -x tests -n5
 
 [testenv:venv]
 commands = {posargs}
@@ -24,7 +24,7 @@ commands = python setup.py test --coverage --coverage-package-name=oslo_utils --
 
 [testenv:bandit]
 deps=-r{toxinidir}/test-requirements.txt
-commands = bandit -r oslo_utils -n5
+commands = bandit -r oslo_utils -x tests -n5
 
 [flake8]
 ignore = E123,H405
