--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ pytz>=2013.6 # MIT
 netaddr!=0.7.16,>=0.7.12 # BSD
 netifaces>=0.10.4 # MIT
 debtcollector>=1.2.0 # Apache-2.0
+pyparsing>=2.0.1 # MIT
