Trivial: ignore openstack/common in flake8 exclude list
The directory openstack/common doesn't exist any more,
so remove it from flake8 exclude list.

Change-Id: I6f7f6bb9dd8b8e89979efd030a022d7455df67c7

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands = bandit -r oslo_utils -x tests -n5
 [flake8]
 ignore = E123,H405
 show-source = True
-exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,__init__.py
+exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,__init__.py
 
 [testenv:pip-missing-reqs]
 # do not install test-requirements as that will pollute the virtualenv for
