--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description-file =
     README.rst
 author = OpenStack
 author-email = openstack-dev@lists.openstack.org
-home-page = http://launchpad.net/oslo
+home-page = http://docs.openstack.org/developer/oslo.utils/
 classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
