Add reno for release notes management
Closes-Bug: #1634356

Change-Id: I6462e42df2a28cd63d6059ef5320cec3ca1473d9

--- a/tox.ini
+++ b/tox.ini
@@ -38,3 +38,6 @@ exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,__init__.py
 # of the requirements.txt files
 deps = pip_missing_reqs
 commands = pip-missing-reqs -d --ignore-module=oslo_utils* --ignore-module=pkg_resources --ignore-file=oslo_utils/test.py --ignore-file=oslo_utils/tests/* oslo_utils
+
+[testenv:releasenotes]
+commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
