--- a/setup.cfg
+++ b/setup.cfg
@@ -22,13 +22,11 @@ classifier =
 packages =
     oslo_utils
 
-[pbr]
-warnerrors = true
-
 [build_sphinx]
+all-files = 1
+warning-is-error = 1
 source-dir = doc/source
 build-dir = doc/build
-all_files = 1
 
 [upload_sphinx]
 upload-dir = doc/build/html
