Update URLs in documents according to document migration
Change-Id: Id03c3457b54b338d656852638cb2731459c531c1

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description-file =
     README.rst
 author = OpenStack
 author-email = openstack-dev@lists.openstack.org
-home-page = http://docs.openstack.org/developer/oslo.utils/
+home-page = https://docs.openstack.org/oslo.utils/latest/
 classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
