Avoid tox_install.sh for constraints support
We do not need tox_install.sh, pip can handle constraints itself
and install the project correctly. Thus update tox.ini and remove
the now obsolete tools/tox_install.sh file.

This follows https://review.openstack.org/#/c/508061 to remove
tools/tox_install.sh.

Change-Id: I0acb957501680b85919ca1672a5d8ad751eac5da

--- a/tox.ini
+++ b/tox.ini
@@ -3,16 +3,14 @@ minversion = 2.0
 envlist = py35,py27,pep8
 
 [testenv]
-setenv =
-    VIRTUAL_ENV={envdir}
-    BRANCH_NAME=master
-    CLIENT_NAME=oslo.utils
-install_command = {toxinidir}/tools/tox_install.sh {env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} {opts} {packages}
-deps = -r{toxinidir}/test-requirements.txt
+install_command = pip install {opts} {packages}
+deps =
+  -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
+  -r{toxinidir}/test-requirements.txt
+  -r{toxinidir}/requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
 [testenv:pep8]
-deps=-r{toxinidir}/test-requirements.txt
 commands =
   flake8
   # Run security linter
@@ -28,7 +26,6 @@ commands = python setup.py build_sphinx
 commands = python setup.py test --coverage --coverage-package-name=oslo_utils --testr-args='{posargs}'
 
 [testenv:bandit]
-deps=-r{toxinidir}/test-requirements.txt
 commands = bandit -r oslo_utils -x tests -n5
 
 [flake8]
