--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands = {posargs}
 
 [testenv:docs]
 deps = -r{toxinidir}/doc/requirements.txt
-commands = sphinx-build -b html doc/source doc/build/html
+commands = sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:cover]
 commands = python setup.py test --coverage --coverage-package-name=oslo_utils --testr-args='{posargs}'
