Clean old output before new doc builds
Remove the doc/build directory to make sure there are no stale
artifacts from past runs.

Change-Id: Icd65eab77928d78ae775adbea03c8cf537b5adc1

--- a/tox.ini
+++ b/tox.ini
@@ -20,8 +20,11 @@ commands =
 commands = {posargs}
 
 [testenv:docs]
+whitelist_externals = rm
 deps = -r{toxinidir}/doc/requirements.txt
-commands = sphinx-build -W -b html doc/source doc/build/html
+commands =
+    rm -fr doc/build
+    sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:cover]
 commands = python setup.py test --coverage --coverage-package-name=oslo_utils --testr-args='{posargs}'
