--- a/tox.ini
+++ b/tox.ini
@@ -3,12 +3,16 @@ minversion = 2.0
 envlist = py35,py27,pep8
 
 [testenv]
+basepython = python3
 install_command = pip install {opts} {packages}
 deps =
   -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
   -r{toxinidir}/test-requirements.txt
   -r{toxinidir}/requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
+
+[testenv:py27]
+basepython = python2.7
 
 [testenv:pep8]
 commands =
@@ -50,7 +54,6 @@ deps = -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
 [testenv:lower-constraints]
-basepython = python3
 deps =
   -c{toxinidir}/lower-constraints.txt
   -r{toxinidir}/test-requirements.txt
