Update hacking version
Use latest release 1.1.0 and compatible changes w.r.t pep8

Change-Id: Ide3a556918f341de6eafecb36ca431da40a0aed0
Closes-Bug: #1815715

--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,8 @@ basepython = python3
 commands = bandit -r oslo_utils -x tests -n5
 
 [flake8]
-ignore = E123,H405
+# E731 skipped as assign a lambda expression
+ignore = E123,E731,H405
 show-source = True
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,__init__.py
 
