--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ whitelist_externals = rm
 deps = -r{toxinidir}/doc/requirements.txt
 commands =
     rm -fr doc/build
-    sphinx-build -W -b html doc/source doc/build/html
+    sphinx-build -W --keep-going -b html doc/source doc/build/html
 
 [testenv:cover]
 basepython = python3
@@ -48,8 +48,11 @@ exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,__init__.py
 
 [testenv:releasenotes]
 basepython = python3
+whitelist_externals = rm
 deps = -r{toxinidir}/doc/requirements.txt
-commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
+commands =
+  rm -rf releasenotes/build
+  sphinx-build -a -E -W -d releasenotes/build/doctrees --keep-going -b html releasenotes/source releasenotes/build/html
 
 [testenv:lower-constraints]
 basepython = python3
