tox: Trivial cleanup
Move 'basepython' to the top-level 'testenv'.
Use the default 'install_command'

https://tox.readthedocs.io/en/latest/config.html#conf-install_command

Change-Id: I45981d5e80ab8ea03176ce08e119556fec078a37

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
-minversion = 2.0
+minversion = 3.1
 envlist = py27,py37,pep8
+ignore_basepython_conflict = True
 
 [testenv]
-install_command = pip install {opts} {packages}
+basepython = python3
 deps =
   -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
   -r{toxinidir}/test-requirements.txt
@@ -14,18 +15,15 @@ commands = stestr run --slowest {posargs}
 basepython = python2.7
 
 [testenv:pep8]
-basepython = python3
 commands =
   flake8
   # Run security linter
   bandit -r oslo_utils -x tests -n5
 
 [testenv:venv]
-basepython = python3
 commands = {posargs}
 
 [testenv:docs]
-basepython = python3
 whitelist_externals = rm
 deps = -r{toxinidir}/doc/requirements.txt
 commands =
@@ -33,11 +31,9 @@ commands =
     sphinx-build -W --keep-going -b html doc/source doc/build/html
 
 [testenv:cover]
-basepython = python3
 commands = python setup.py test --coverage --coverage-package-name=oslo_utils --testr-args='{posargs}'
 
 [testenv:bandit]
-basepython = python3
 commands = bandit -r oslo_utils -x tests -n5
 
 [flake8]
@@ -47,7 +43,6 @@ show-source = True
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,__init__.py
 
 [testenv:releasenotes]
-basepython = python3
 whitelist_externals = rm
 deps = -r{toxinidir}/doc/requirements.txt
 commands =
@@ -55,7 +50,6 @@ commands =
   sphinx-build -a -E -W -d releasenotes/build/doctrees --keep-going -b html releasenotes/source releasenotes/build/html
 
 [testenv:lower-constraints]
-basepython = python3
 deps =
   -c{toxinidir}/lower-constraints.txt
   -r{toxinidir}/test-requirements.txt
