--- a/tox.ini
+++ b/tox.ini
@@ -22,10 +22,12 @@ commands = {posargs}
 
 [testenv:docs]
 whitelist_externals = rm
-deps = -r{toxinidir}/doc/requirements.txt
+deps =
+  -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+  -r{toxinidir}/doc/requirements.txt
 commands =
-    rm -fr doc/build
-    sphinx-build -W --keep-going -b html doc/source doc/build/html
+  rm -fr doc/build
+  sphinx-build -W --keep-going -b html doc/source doc/build/html
 
 [testenv:cover]
 commands = python setup.py test --coverage --coverage-package-name=oslo_utils --testr-args='{posargs}'
@@ -41,7 +43,8 @@ exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,__init__.py
 
 [testenv:releasenotes]
 whitelist_externals = rm
-deps = -r{toxinidir}/doc/requirements.txt
+deps =
+  {[testenv:docs]deps}
 commands =
   rm -rf releasenotes/build
   sphinx-build -a -E -W -d releasenotes/build/doctrees --keep-going -b html releasenotes/source releasenotes/build/html
