tox: Use upper-constraints for docs jobs
Conflicts:
    tox.ini

Note(elod.illes): conflict is due to multiple python 2 removal and
tox.ini restructuring patches which are not needed to be backported to
Train. Upper constraint file link set to point to Train version of the
file.

Change-Id: I43225fc4ed3ba471ba7097f1e317bc6ffa777a46
(cherry picked from commit 8433aba4d6b5925fa8fb223d51a816ff541f1f2f)

--- a/tox.ini
+++ b/tox.ini
@@ -27,10 +27,12 @@ commands = {posargs}
 [testenv:docs]
 basepython = python3
 whitelist_externals = rm
-deps = -r{toxinidir}/doc/requirements.txt
+deps =
+  -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/train}
+  -r{toxinidir}/doc/requirements.txt
 commands =
-    rm -fr doc/build
-    sphinx-build -W -b html doc/source doc/build/html
+  rm -fr doc/build
+  sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:cover]
 basepython = python3
@@ -48,7 +50,8 @@ exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,__init__.py
 
 [testenv:releasenotes]
 basepython = python3
-deps = -r{toxinidir}/doc/requirements.txt
+deps =
+  {[testenv:docs]deps}
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
 [testenv:lower-constraints]
