[ussuri][goal] Drop python 2.7 support and testing
OpenStack is dropping the py2.7 support in Ussuri cycle.

Complete discussion & schedule can be found in
-
http://lists.openstack.org/pipermail/openstack-discuss/2019-October/010142.html
- https://etherpad.openstack.org/p/drop-python2-support

Ussuri Communtiy-wide goal:
https://governance.openstack.org/tc/goals/selected/ussuri/drop-py27.html

Change-Id: If437786eb8dbba9386dd473b45dab0933812c649

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 3.1
-envlist = py27,py37,pep8
-ignore_basepython_conflict = True
+envlist = py37,pep8
+ignore_basepython_conflict = true
 
 [testenv]
 basepython = python3
@@ -10,9 +10,6 @@ deps =
   -r{toxinidir}/test-requirements.txt
   -r{toxinidir}/requirements.txt
 commands = stestr run --slowest {posargs}
-
-[testenv:py27]
-basepython = python2.7
 
 [testenv:pep8]
 commands =
