--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,8 @@ commands = bandit -r oslo_utils -x tests -n5
 
 [flake8]
 # E731 skipped as assign a lambda expression
-ignore = E123,E731,H405
+# W504 line break after binary operator
+ignore = E123,E731,H405,W504
 show-source = True
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,__init__.py
 
