--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-minversion = 3.1
+minversion = 3.18.0
 envlist = py3,pep8
 ignore_basepython_conflict = true
 
@@ -21,7 +21,7 @@ commands =
 commands = {posargs}
 
 [testenv:docs]
-whitelist_externals = rm
+allowlist_externals = rm
 deps =
   -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
   -r{toxinidir}/doc/requirements.txt
@@ -43,7 +43,7 @@ show-source = True
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,__init__.py
 
 [testenv:releasenotes]
-whitelist_externals = rm
+allowlist_externals = rm
 deps =
   {[testenv:docs]deps}
 commands =
