--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@
 
 iso8601>=0.1.11 # MIT
 oslo.i18n>=3.15.3 # Apache-2.0
+pytz>=2013.6 # MIT
 netaddr>=0.7.18 # BSD
 netifaces>=0.10.4 # MIT
 debtcollector>=1.2.0 # Apache-2.0
