pre-commit: Integrate bandit
We also remove these unnecessary linter dependencies from
test-requirements.txt.

The independent bandit target was removed because it's integrated to
the pep8 target.

Co-Authored-By: Stephen Finucane <sfinucan@redhat.com>
Change-Id: I0c9ca1f9310820c83667bffa2d1287d3daffccbc

--- a/tox.ini
+++ b/tox.ini
@@ -12,10 +12,10 @@ deps =
 commands = stestr run --slowest {posargs}
 
 [testenv:pep8]
+deps =
+  pre-commit
 commands =
   pre-commit run -a
-  # Run security linter
-  bandit -r oslo_utils -x tests -n5
 
 [testenv:venv]
 commands = {posargs}
@@ -31,9 +31,6 @@ commands =
 
 [testenv:cover]
 commands = python setup.py test --coverage --coverage-package-name=oslo_utils --testr-args='{posargs}'
-
-[testenv:bandit]
-commands = bandit -r oslo_utils -x tests -n5
 
 [flake8]
 # E731 skipped as assign a lambda expression
