--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,8 +1,5 @@
-# The order of packages is significant, because pip processes them in the order
-# of appearance. Changing the order has an impact on the overall integration
-# process, which may cause wedges in the gate later.
 # this is required for the docs build jobs
-sphinx>=2.0.0,!=2.1.0 # BSD
+sphinx>=2.0.0 # BSD
 openstackdocstheme>=2.2.0 # Apache-2.0
 reno>=3.1.0 # Apache-2.0
 fixtures>=3.0.0 # Apache-2.0/BSD
