Fix coverage target
This imports the [cover] target content from nova, which works. The
existing one here fails with a setup.py complaint about the test
command being missing. Trying the content from oslo_log does not work
either.

Change-Id: Ifc7b1a8bac54a826e6c197825a3e2f98b67323f1

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,20 @@ commands =
   sphinx-build -W --keep-going -b html doc/source doc/build/html
 
 [testenv:cover]
-commands = python setup.py test --coverage --coverage-package-name=oslo_utils --testr-args='{posargs}'
+# TODO(stephenfin): Remove the PYTHON hack below in favour of a [coverage]
+# section once we rely on coverage 4.3+
+#
+# https://bitbucket.org/ned/coveragepy/issues/519/
+setenv =
+  PYTHON=coverage run --source oslo_utils --parallel-mode
+extras =
+commands =
+  coverage erase
+  stestr run {posargs}
+  coverage combine
+  coverage html -d cover
+  coverage xml -o cover/coverage.xml
+  coverage report
 
 [flake8]
 # E731 skipped as assign a lambda expression
