--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -2,6 +2,7 @@
     templates:
       - check-requirements
       - lib-forward-testing-python3
+      - openstack-cover-jobs
       - openstack-python3-jobs
       - periodic-stable-jobs
       - publish-openstack-docs-pti
