--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@
 iso8601>=0.1.11 # MIT
 oslo.i18n>=3.15.3 # Apache-2.0
 netaddr>=0.10.0 # BSD
-netifaces>=0.10.4 # MIT
 debtcollector>=1.2.0 # Apache-2.0
 pyparsing>=2.1.0 # MIT
 packaging>=20.4 # BSD
 tzdata>=2022.4 # MIT
 PyYAML>=3.13 # MIT
+psutil>=3.2.2 # BST
