Migrate setup configuration to pyproject.toml
Change-Id: I7b8180f1d7be8fda4d753ce8d5528162cf8dbd8a
Signed-off-by: Stephen Finucane <sfinucan@redhat.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,36 @@
 [build-system]
 requires = ["pbr>=6.1.1"]
 build-backend = "pbr.build"
+
+[project]
+name = "oslo.utils"
+description = "Oslo Utility library"
+authors = [
+    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
+]
+readme = {file = "README.rst", content-type = "text/x-rst"}
+license = {text = "Apache-2.0"}
+dynamic = ["version", "dependencies"]
+requires-python = ">=3.10"
+classifiers = [
+  "Environment :: OpenStack",
+  "Intended Audience :: Information Technology",
+  "Intended Audience :: System Administrators",
+  "License :: OSI Approved :: Apache Software License",
+  "Operating System :: POSIX :: Linux",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+]
+
+[project.urls]
+Homepage = "https://docs.openstack.org/oslo.utils"
+Repository = "https://opendev.org/openstack/oslo.utils/"
+
+[tool.setuptools]
+packages = [
+    "oslo_utils"
+]
