--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,17 @@ Repository = "https://opendev.org/openstack/oslo.utils/"
 packages = [
     "oslo_utils"
 ]
+
+[tool.ruff]
+line-length = 79
+
+[tool.ruff.format]
+quote-style = "preserve"
+docstring-code-format = true
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F", "S", "UP"]
+ignore = ["UP031"]
+
+[tool.ruff.lint.per-file-ignores]
+"oslo_utils/tests/*" = ["S"]
