--- a/tox.ini
+++ b/tox.ini
@@ -45,10 +45,13 @@ commands =
   coverage report
 
 [flake8]
-# E731 skipped as assign a lambda expression
-# W504 line break after binary operator
-ignore = E123,E731,H405,W504
-show-source = True
+# We only enable the hacking (H) checks
+select = H
+# H301 Ruff will put commas after imports that can't fit on one line
+# H404 Docstrings don't always start with a newline
+# H405 Multiline docstrings are okay
+ignore = H301,H404,H405
+show-source = true
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,__init__.py
 
 [testenv:releasenotes]
