--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,37 @@ packages = [
     "oslo_utils"
 ]
 
+[tool.mypy]
+python_version = "3.10"
+show_column_numbers = true
+show_error_context = true
+strict = true
+# debtcollector is untyped (for now)
+disallow_untyped_decorators = false
+# some of our own functional are untyped (for now)
+disallow_untyped_calls = false
+exclude = '''
+(?x)(
+    doc
+    | releasenotes
+  )
+'''
+
+[[tool.mypy.overrides]]
+module = [
+    "oslo_utils.imageutils.*",
+]
+disallow_untyped_calls = false
+disallow_untyped_defs = false
+disallow_subclassing_any = false
+
+[[tool.mypy.overrides]]
+module = [
+    "oslo_utils.fixture",
+    "oslo_utils.tests.*",
+]
+ignore_errors = true
+
 [tool.ruff]
 line-length = 79
 
