--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,9 @@ module = [
     "oslo_utils.fixture",
     "oslo_utils.tests.*",
 ]
-ignore_errors = true
+disallow_untyped_calls = false
+disallow_untyped_defs = false
+disallow_subclassing_any = false
 
 [tool.ruff]
 line-length = 79
