Remove trailing slash from URL
... to keep the format consistent across the repos.

Change-Id: I6e9fe81a3564e972c57434ab4420eecb5d8a1171
Signed-off-by: Takashi Kajinami <kajinamit@oss.nttdata.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [
 
 [project.urls]
 Homepage = "https://docs.openstack.org/oslo.utils"
-Repository = "https://opendev.org/openstack/oslo.utils/"
+Repository = "https://opendev.org/openstack/oslo.utils"
 
 [tool.setuptools]
 packages = [
