--- a/tox.ini
+++ b/tox.ini
@@ -10,11 +10,27 @@ deps =
 commands = stestr run --slowest {posargs}
 
 [testenv:pep8]
-skip_install = true
+description =
+  Run style checks.
 deps =
   pre-commit
+  {[testenv:mypy]deps}
 commands =
   pre-commit run -a
+  {[testenv:mypy]commands}
+
+[testenv:mypy]
+description =
+  Run type checks.
+deps =
+  {[testenv]deps}
+  mypy
+  types-greenlet
+  types-netaddr
+  types-psutil
+  types-PyYAML
+commands =
+  mypy --cache-dir="{envdir}/mypy_cache" {posargs:oslo_utils}
 
 [testenv:venv]
 commands = {posargs}
