Add types to oslo_utils.fixture
The fixtures library now has types.

Change-Id: If9bf31e250fa198225a6a4c88dad7844a1bf7f40
Signed-off-by: Stephen Finucane <sfinucan@redhat.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,6 +34,7 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies:
+          - fixtures
           - iso8601
           - packaging
           - pyparsing
