--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ quote-style = "preserve"
 docstring-code-format = true
 
 [tool.ruff.lint]
-select = ["E4", "E5", "E7", "E9", "F", "S", "UP"]
+select = ["E4", "E5", "E7", "E9", "F", "G", "LOG", "S", "UP"]
 
 [tool.ruff.lint.per-file-ignores]
 "oslo_utils/tests/*" = ["S"]
