--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,8 +41,7 @@ python_version = "3.10"
 show_column_numbers = true
 show_error_context = true
 strict = true
-# debtcollector is untyped (for now)
-disallow_untyped_decorators = false
+disable_error_code = ["import-untyped"]
 exclude = '(?x)(doc | releasenotes)'
 
 [[tool.mypy.overrides]]
